--- a/test-playbook.yml
+++ b/test-playbook.yml
@@ -8,7 +8,7 @@
         - name: Install testinfra
           ansible.builtin.shell: 'pip3 install -r requirements.txt'
         - name: Execute Test For all hosts
-          ansible.builtin.shell: 'py.test --hosts=ansible://all -v tests/test_myinfra.py'
+          ansible.builtin.shell: 'py.test --ansible-inventory=inventory --hosts=ansible://all -v tests/test_myinfra.py'
           register: test_result
           changed_when: no
         - ansible.builtin.debug:
