--- a/test-playbook.yml
+++ b/test-playbook.yml
@@ -8,8 +8,13 @@
         - name: Install testinfra
           ansible.builtin.shell: 'pip3 install -r requirements.txt'
         - shell: 'pwd'
+          register: workdir
+        - debug:
+            msg: "{{ workdir.stdout }}"
         - shell: 'ls -l'
-        - shell: 'ls -l /etc/ansible/'
+          register: workdir_list
+        - debug:
+            msg: "{{ workdir_list.stdout_lines }}"
         - name: Execute Test For all hosts
           ansible.builtin.shell: 'py.test --hosts=ansible://all -v tests/test_myinfra.py'
           register: test_result
