--- a/test-playbook.yml
+++ b/test-playbook.yml
@@ -5,15 +5,10 @@
   tasks:
     - name: Execute Test for all hosts
       block:
-        - shell: 'ip -a'
-          register: config
-        - debug:
-            msg: "{{ config.stdout_lines }}"
-        - name: Install testinfra
-          ansible.builtin.shell: 'pip3 install -r requirements.txt'
-
+        - name: install testinfra
+          ansible.builtin.shell: "pip3 install pytest-testinfra"
         - name: Execute Test For all hosts
-          ansible.builtin.shell: 'py.test --hosts=ansible://all -v tests/test_myinfra.py'
+          ansible.builtin.shell: "py.test --hosts=ansible://all --ssh-extra-args='-o StrictHostKeyChecking~no' -v tests/test_myinfra.py"
           register: test_result
           changed_when: no
         - ansible.builtin.debug:
