--- a/test-playbook.yml
+++ b/test-playbook.yml
@@ -5,21 +5,20 @@
   tasks:
     - name: Execute Test for all hosts
       block:
-        - shell: 'echo $ANSIBLE_CONFIG'
-          register: conf
-        - debug: 
-            msg: "{{ conf.stdout }}"
-
         - name: install testinfra
           ansible.builtin.shell: "pip3 install pytest-testinfra"
-        - shell: 'export ANSIBLE_SSH_EXTRA_ARGS='
+
+        - name: "Disable Host key Checking when py.test to test targets via ssh"
+          shell: "export ANSIBLE_SSH_EXTRA_ARGS='-o StrictHostKeyChecking=no'"
+
         - name: Execute Test For all hosts
-          ansible.builtin.shell: "py.test --force-ansible --hosts=ansible://all -v tests/test_myinfra.py"
+          ansible.builtin.shell: "py.test --hosts=ansible://all -v tests/test_myinfra.py"
           register: test_result
           changed_when: no
 
         - ansible.builtin.debug:
             msg: "{{ test_result.stdout_lines }}"
+
       rescue:
         - ansible.builtin.debug:
             msg: "{{ test_result.stdout_lines }}"
